--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ articles:
   show_excerpt: true
   show_readmore: true
   show_info: true
-comments: false
+comment: false
 ---
 <div class="layout--home">
   {%- include paginator.html -%}
