--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -77,5 +77,8 @@
 .article__content .highlighter-rouge>.highlight>pre>code,
 .article__content figure.highlight>pre>code {
  display:block;
- font-size: 16px;
+ font-size: 14px;
+}
+blockquote{
+    font-size: 1rem;
 }
