--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -82,3 +82,6 @@
 .article__content blockquote{
     font-size: 1rem;
 }
+.root[data-is-touch="false"] a > .item__header:hover, .root[data-is-touch="false"] a.item__header:hover, .root[data-is-touch="false"] .item__header > a:hover {
+    text-shadow: 5px 5px 2px #fc4d50;
+}
