--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -89,5 +89,5 @@
     border-left-width: 6px;
 }
 .article__content h1:hover, .article__content h2:hover{
-    border-bottom-width: 4px;
+    text-shadow: 2px 2px 2px "black";
 }
