--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -77,6 +77,7 @@
 .article__content .highlighter-rouge>.highlight>pre>code,
 .article__content figure.highlight>pre>code {
  display:block;
+ border: dashed #eee
  font-size: 15px;
 }
 .article__content blockquote{
